added jwt token security setup